Carga de pan salado
Es la carga de archivos con las recetas de pan salado

--- a/Style.css
+++ b/Style.css
@@ -117,10 +117,25 @@ ul {
     margin-right: 10%;
 }
 
+
+
+
+#tituloPanSalado{
+    
+    color: #140808;
+    padding: 20px;
+    text-align: center;
+    font-size: 2em;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
 #tablaIngredientes{
     
     border-collapse: separate;
     width: 80%;
+    margin-bottom: 30px;
     margin-top: 20px;
     margin-left: 10%;
     margin-right: 10%;
@@ -133,12 +148,26 @@ ul {
     
     border-collapse: separate;
     width: 80%;
+    margin-bottom: 30px;
     margin-top: 20px;
     margin-left: 10%;
     margin-right: 10%;
     border-spacing: 5px 5px;
 
 }
+
+#tablaPanSalado{
+    
+    border-collapse: separate;
+    width: 80%;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-spacing: 5px 5px;
+    margin-bottom: 30px;
+
+}
+
 
 button {
     cursor: pointer;
