--- a/Style.css
+++ b/Style.css
@@ -3,24 +3,69 @@
 header{
     background-color: #fdca40;
     color: #140808;
-    padding: 40px 30px;
+    padding: 20px 30px;
     text-align: end; 
 
 }
 
+nav {
+    background-color: #fdca40;
+    
+    margin-right: 10%;
+}
 ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
     list-style: none;
     padding: 0;
-    margin: 0;
+    
 }
 
 li {
     display: block;
-    margin: 0 10px;
+    text-align: center;
 }
+
+
+.menu,
+.menu-panaderia {
+    position: relative;
+}
+
+.menu > ul.menu-cafeteria,
+.menu-panaderia > ul.menu-panaderia-content {
+    display: none;
+    position: absolute;
+    top: 100%;
+
+    background: #fdca40;
+    padding: 2%;
+    min-width: 150px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    z-index: 100;
+}
+
+.menu:hover > ul.menu-cafeteria,
+.menu:focus-within > ul.menu-cafeteria,
+.menu-panaderia:hover > ul.menu-panaderia-content,
+.menu-panaderia:focus-within > ul.menu-panaderia-content {
+    display: block;
+}
+
+.menu > ul.menu-cafeteria li,
+.menu-panaderia > ul.menu-panaderia-content li {
+   
+    padding: 8px 0px;
+    white-space: nowrap;
+}
+
+.menu > ul.menu-cafeteria li:hover,
+.menu-panaderia > ul.menu-panaderia-content li:hover {
+    background: #ffe484;
+}
+
+
 
 
 body {
@@ -54,29 +99,55 @@ body {
     font-size: 1.2em;
 }
 
-.caja1{
-    background-color: #ba1c1c;
+.seccionCotizador {
+    background-color: #f9f9f9;
     padding: 20px;
     border-radius: 5px;
     margin-bottom: 20px;
     margin-top: 20px;
     margin-left: 40px;
     margin-right: 40px;
+}
+
+.nombreProducto{
+    text-align: center;
+    margin-right: 100px;
+    margin-left: 100px;
+    font-size: 1.1em;
     
 }
-.cajas > *{
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    margin-left: 40px;
-    margin-right: 40px;
-    width: 33%;
-}
-.cajas{
+.botonesInicio {
     display: flex;
-    
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.btnAgregar {
+    background-color: #fdca40;
+    color: #140808;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    margin-left: 0;
+    margin-right: auto;
+    display: block;
+}
+
+.botonDeCotizador {
+    background-color: #fdca40;
+    color: #140808;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    margin-right: 50%;
+    display: block;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -117,15 +188,86 @@ ul {
     margin-right: 10%;
 }
 
+
+
+
+#tituloPanSalado{
+    
+    color: #140808;
+    padding: 20px;
+    text-align: center;
+    font-size: 2em;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+#tituloRellenos{
+    
+    color: #140808;
+    padding: 20px;
+    text-align: center;
+    font-size: 2em;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+#tituloDePasteles{
+    
+    color: #140808;
+    padding: 20px;
+    text-align: center;
+    font-size: 2em;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+#tituloDeGalletas{
+    
+    color: #140808;
+    padding: 20px;
+    text-align: center;
+    font-size: 2em;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+#tituloDePreparados{
+    
+    color: #140808;
+    padding: 20px;
+    text-align: center;
+    font-size: 2em;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;  
+
+}
+
 #tablaIngredientes{
     
     border-collapse: separate;
     width: 80%;
+    margin-bottom: 30px;
     margin-top: 20px;
     margin-left: 10%;
     margin-right: 10%;
     border-spacing: 5px 5px;
 
+}
+
+#btnImprimirIngredientes {
+    margin-left: 40%;
+    margin-bottom: 20px;
+    width: 15%;
+    background-color: #fdca40;
+    color: #140808;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
 }
 
 
@@ -133,12 +275,60 @@ ul {
     
     border-collapse: separate;
     width: 80%;
+    margin-bottom: 30px;
     margin-top: 20px;
     margin-left: 10%;
     margin-right: 10%;
     border-spacing: 5px 5px;
 
 }
+
+#tablaPanSalado{
+    
+    border-collapse: separate;
+    width: 80%;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-spacing: 5px 5px;
+    margin-bottom: 30px;
+
+}
+#tablaRellenos{
+    
+    border-collapse: separate;
+    width: 80%;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-spacing: 5px 5px;
+    margin-bottom: 30px;
+
+}
+
+#tablaMasas{
+
+    border-collapse: separate;
+    width: 80%;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-spacing: 5px 5px;
+    margin-bottom: 30px;
+
+}
+#tablaPanDeTemporada{
+    
+    border-collapse: separate;
+    width: 80%;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-spacing: 5px 5px;
+    margin-bottom: 30px;
+
+}
+
 
 button {
     cursor: pointer;
@@ -150,6 +340,6 @@ button {
 footer {
     background-color: #31393c;
     color: #ffffff;
-    padding: 40px;
+    padding: 10px;
     text-align: center;
 }
